--- a/css/menu.css
+++ b/css/menu.css
@@ -1,7 +1,8 @@
 .menu-menu-ena-container {
 	width: 900px;
 	/*margin: 100px auto;*/
-	background-color: #829BB5;
+	/*background-color: #829BB5;*/
+	background-color: black;
 	-webkit-border-bottom-left-radius: 10px;
 	-webkit-border-bottom-right-radius: 10px;
 	-moz-border-radius-bottomleft: 10px;
