--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -14,6 +14,7 @@
 .ludlit_wc.woocommerce ul.products.ludlit_wc_recent_posts, 
 .ludlit_wc .woocommerce ul.products.ludlit_wc_recent_posts {
     grid-template-columns: repeat(3, 1fr);
+    column-gap: 4rem;;
 }
 
 .ludlit_wc_post_meta {
