--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ Tags: black, blue, white, two-columns, fixed-width, custom-header, custom-backgr
  }
  
  html {
-	 font-size: 14px !important;
+	 /*font-size: 14px !important;*/
  }
  
  body {
