--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -7,8 +7,8 @@
     border-bottom: none;
 }
 
-.page-template-front-page-block-parts .ludlit_wc_custom_products {
-    margin: 1rem 0;
+.page-template-front-page-block-parts div.ludlit_wc.ludlit_wc_custom_products {
+    margin: 1rem 0 var(--wp--preset--spacing--70) 0;
 }
 
 
