--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -8,7 +8,7 @@
 }
 
 .page-template-front-page-block-parts div.ludlit_wc.ludlit_wc_custom_products {
-    margin: 1rem 0 var(--wp--preset--spacing--70) 0;
+    margin: var(--wp--preset--spacing--70) 0;
 }
 
 
