p on front w/out indent

--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -1,3 +1,9 @@
+.page-template-front-page-block-parts p + p,
+.page-template-front-page-block-parts p
+ {
+    text-indent: 0;
+}
+
 .page-template-front-page-block-parts section {
     border-bottom: 1px solid black;
     padding-bottom: var(--wp--preset--spacing--60);
