--- a/includes/ludlit_mailchimp_form.html
+++ b/includes/ludlit_mailchimp_form.html
@@ -8,19 +8,19 @@
 <div class="mc-field-group">
 	<label for="mce-EMAIL">e-naslov  <span class="asterisk">*</span>
 </label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required autocomplete="email">
 	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
 </div>
 <div class="mc-field-group">
 	<label for="mce-FNAME">ime  <span class="asterisk">*</span>
 </label>
-	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" required>
+	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" required autocomplete="given-name">
 	<span id="mce-FNAME-HELPERTEXT" class="helper_text"></span>
 </div>
 <div class="mc-field-group">
 	<label for="mce-LNAME">priimek  <span class="asterisk">*</span>
 </label>
-	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME" required>
+	<input type="text" value="" name="LNAME" class="required" id="mce-LNAME" required autocomplete="family-name">
 	<span id="mce-LNAME-HELPERTEXT" class="helper_text"></span>
 </div>
 </div>
@@ -29,7 +29,7 @@
     <div class="content__gdpr">
         <label>Izrecno dovoljenje za vzpostavitev stika</label>
         <!-- <p>LUD Literatura vas bo tvoje vpisane podatke uporabljalo za vzpostavljanje stika. Obveščali te bomo o objavah, izdajah, dogodkih, priložnostih ipd., povezanih z našo dejavnostjo. Če se strinjaš, označi.</p> -->
-        <p class="ludlit_wc_mailchimp_navodilo">Vedno si lahko premisliš. Brez nadaljnjega. Navodila za odjavo ali spremembo nastavitev so na dnu vsakega elektronskega dopisa. Tvoje podatke in odločitve bomo spoštovali. Spodaj lahko potrdiš, da se s tem strinjaš. Za obveščanje uporabljamo storitev Mailchimp, ki bo tvoje podatke uporabljala <a href="https://mailchimp.com/legal/terms">skladno s pravili</a>.</p>
+        <p class="ludlit_wc_mailchimp_navodilo">Za obveščanje uporabljamo storitev Mailchimp, ki bo tvoje podatke uporabljala <a href="https://mailchimp.com/legal/terms">skladno s pravili</a>. Vedno si lahko premisliš. Brez nadaljnjega. Navodila za odjavo ali spremembo nastavitev so na dnu vsakega elektronskega dopisa. Tvoje podatke in odločitve bomo spoštovali. Spodaj lahko potrdiš, da se s tem strinjaš.</p>
         <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
 		<label class="checkbox subfield" for="gdpr_15591"><input type="checkbox" id="gdpr_15591" name="gdpr[15591]" value="Y" class="av-checkbox "><span class="has-normal-font-size">Soglašam</span> </label>
         </fieldset>
