header font size, mailchimp margin

--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -159,6 +159,7 @@ new header menus
     background-color: var(--ludlit-wc-gray-2);
     padding: var(--wp--preset--spacing--60);
     margin-bottom: var(--wp--preset--spacing--80);
+    margin-top: var(--wp--preset--spacing--60);
     /*
     display: flex;
     justify-content: center;
