--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -228,6 +228,7 @@ new header menus
     border-top: 1px solid;
     margin-top: var(--wp--preset--spacing--70);
     padding-top: var(--wp--preset--spacing--70);
+    padding-bottom: var(--wp--preset--spacing--70);
 }
 /* end footer */
 
