--- a/includes/ludlit_woo_theme_style.css
+++ b/includes/ludlit_woo_theme_style.css
@@ -234,6 +234,10 @@ new header menus
     padding-top: var(--wp--preset--spacing--70);
     padding-bottom: var(--wp--preset--spacing--70);
 }
+
+.ludlit_wc_footer * {
+    text-indent: 0;
+}
 /* end footer */
 
 /* media queries */
