use official var fonr fonts, image on left

--- a/tribe-events/tribe-events.css
+++ b/tribe-events/tribe-events.css
@@ -1,13 +1,7 @@
 :root {
     --ludlit-woo--tribe-events--radius--list: 10px;
     --ludlit-woo--tribe-events--radius--single: 20px;
-}
-
-.ludlit-woo-theme .tribe-events *,
-.ludlit-woo-theme .tribe-events-single *, 
-.ludlit-woo-theme .single-tribe_events *,
-.ludlit-woo-theme .post-type-archive-tribe_events * {
-    font-family: var(--ludlit-wc-sans-font-family);
+    --tec-font-family-sans-serif: var(--ludlit-wc-sans-font-family);
 }
 
 .ludlit-woo-theme .tribe-events-calendar-list__event-featured-image {
@@ -16,4 +10,8 @@
 
 .ludlit-woo-theme.single-tribe_events .tribe-events-event-image > img {
     border-radius: var(--ludlit-woo--tribe-events--radius--single);
+}
+
+.ludlit-woo-theme .tribe-events-calendar-list__event-featured-image-wrapper {
+    order: 1; /* featured image on the left in list view? */
 }
